# dirmon

./: .gitignore  Cargo.toml  README.md  dirmon.toml
src/: bgmon.rs  command.rs  config.rs  example.rs  gui.rs  plugin.rs  reactor.rs  service.rs
