[package]
name = "dirmon"
version = "0.1.0"
edition = "2024"
default-run = "service"

[dependencies]
eframe = "0.33.0"
egui = "0.33.0"
egui-file-dialog = "0.12.0"
named_pipe = "0.4.1"
notify = "8.2.0"
serde_toml = "0.0.1"
toml = "0.9.8"
windows-service = "0.8.0"

[[bin]]
name = "gui"
path = "src/gui.rs"

[[bin]]
name = "service"
path = "src/service.rs"

[[bin]]
name = "bgmon"
path = "src/bgmon.rs"

